--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body{
     background-image: url('img\\Background.jpg');
     background-repeat: repeat;
     margin: 0;
+    min-height: 100%;
 }
 
 a{
@@ -110,9 +116,14 @@ footer{
     margin-right: 5px;
 }
 
+/* For mobile phones: */
+/* Cand ecranul e prea mic, cardurile iau latimea lui*/
+
+/*
 @media only screen and (max-width: 620px) {
-    /* For mobile phones: */
+    
     .card{
-      width: 100%;                            /* Cand ecranul e prea mic, cardurile iau latimea lui*/
+        width: 100%;     
     }
 }
+*/
